--- a/src/boundary/projectionForm.form
+++ b/src/boundary/projectionForm.form
@@ -101,10 +101,7 @@
                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Component id="is4D" min="-2" pref="15" max="-2" attributes="0"/>
-                      <Group type="102" alignment="0" attributes="0">
-                          <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                          <Component id="cButton2" min="-2" max="-2" attributes="0"/>
-                      </Group>
+                      <Component id="cButton2" alignment="0" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace min="-2" pref="22" max="-2" attributes="0"/>
               </Group>
