--- a/src/boundary/movieForm.form
+++ b/src/boundary/movieForm.form
@@ -206,12 +206,12 @@
       <SubComponents>
         <Component class="javax.swing.JLabel" name="title">
           <Properties>
-            <Property name="text" type="java.lang.String" value="TITULO"/>
+            <Property name="text" type="java.lang.String" value="TITLE"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel2">
           <Properties>
-            <Property name="text" type="java.lang.String" value="GENERO"/>
+            <Property name="text" type="java.lang.String" value="GENRE"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="titulo">
@@ -259,7 +259,7 @@
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel1">
           <Properties>
-            <Property name="text" type="java.lang.String" value="DURACION"/>
+            <Property name="text" type="java.lang.String" value="LENGTH"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="jTextField1">
@@ -269,7 +269,7 @@
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel3">
           <Properties>
-            <Property name="text" type="java.lang.String" value="LENGUAJE"/>
+            <Property name="text" type="java.lang.String" value="LANGUAGE"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JComboBox" name="lenguajesList">
