Build Debugging Panel

--- a/src/boundary/mainFrame.form
+++ b/src/boundary/mainFrame.form
@@ -94,6 +94,17 @@
             <AuxValue name="classDetails" type="java.lang.String" value="Box.Filler.HorizontalGlue"/>
           </AuxValues>
         </Component>
+        <Component class="javax.swing.JButton" name="debugBTN">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="Debugging"/>
+            <Property name="focusable" type="boolean" value="false"/>
+            <Property name="horizontalTextPosition" type="int" value="0"/>
+            <Property name="verticalTextPosition" type="int" value="3"/>
+          </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="debugBTNActionPerformed"/>
+          </Events>
+        </Component>
         <Component class="javax.swing.JButton" name="manageBTN">
           <Properties>
             <Property name="text" type="java.lang.String" value="Manage"/>
